--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas/Web.config
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Com.PGJ.SistemaPolizas-20170223105725.mdf;Initial Catalog=aspnet-Com.PGJ.SistemaPolizas-20170223105725;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="data source=localhost\SQLEXPRESS;initial catalog=PGJSistemaPolizas;integrated security=True;" providerName="System.Data.SqlClient" />
-    <add name="PGJSistemaPolizasEntities" connectionString="metadata=res://*/Model.PolizasPGJDataModel.csdl|res://*/Model.PolizasPGJDataModel.ssdl|res://*/Model.PolizasPGJDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=PGJSistemaPolizas;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PGJSistemaPolizasEntities" connectionString="metadata=res://*/Model.PolizasPGJDataModel.csdl|res://*/Model.PolizasPGJDataModel.ssdl|res://*/Model.PolizasPGJDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OPTIMX-FEDERICO\SQLEXPRESS;initial catalog=PGJSistemaPolizas;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
