Se integró login

--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AreasService.cs" />
     <Compile Include="IngresosService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuariosService.cs" />
