--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.csproj
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.csproj
@@ -190,6 +190,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\Api\AreasController.cs" />
     <Compile Include="Controllers\Api\IngresosController.cs" />
     <Compile Include="Controllers\Api\SecurityController.cs" />
     <Compile Include="Controllers\Api\UsuariosController.cs" />
