Avance de refactor de administración de perfil de usuario

--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="AreasService.cs" />
     <Compile Include="Dto\AreaDto.cs" />
+    <Compile Include="Dto\DetalleUsuarioDto.cs" />
     <Compile Include="IngresosService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuariosService.cs" />
