--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
@@ -57,7 +57,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AfianzadorasService.cs" />
     <Compile Include="AreasService.cs" />
+    <Compile Include="Dto\AfianzadoraDto.cs" />
     <Compile Include="Dto\AreaDto.cs" />
     <Compile Include="Dto\DetalleUsuarioDto.cs" />
     <Compile Include="IngresosService.cs" />
