--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Web.csproj
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Web.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Controllers\Api\AreasController.cs" />
     <Compile Include="Controllers\Api\AutoridadesController.cs" />
     <Compile Include="Controllers\Api\IngresosController.cs" />
+    <Compile Include="Controllers\Api\PolizasController.cs" />
     <Compile Include="Controllers\Api\SecurityController.cs" />
     <Compile Include="Controllers\Api\UsuariosController.cs" />
     <Compile Include="Controllers\Web\AccountController.cs" />
