Se integró REST para búsqueda de depositantes según afianzado

--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Service/Com.PGJ.SistemaPolizas.Service.csproj
@@ -58,8 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AfianzadorasService.cs" />
+    <Compile Include="AfianzadosService.cs" />
     <Compile Include="AreasService.cs" />
     <Compile Include="AutoridadesService.cs" />
+    <Compile Include="DepositantesService.cs" />
     <Compile Include="Dto\AfianzadoDto.cs" />
     <Compile Include="Dto\AfianzadoraDto.cs" />
     <Compile Include="Dto\AreaDto.cs" />
