Refactor e implementación de Ministerios públicos

--- a/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Data/Com.PGJ.SistemaPolizas.Data.csproj
+++ b/Com.PGJ.SistemaPolizas/Com.PGJ.SistemaPolizas.Data/Com.PGJ.SistemaPolizas.Data.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Model\Areas.cs">
       <DependentUpon>PolizasPGJDataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\Autoridads.cs">
+    <Compile Include="Model\Autoridades.cs">
       <DependentUpon>PolizasPGJDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\Depositantes.cs">
